apps/bvrinfra-site/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: bvrinfra-site
  namespace: apps

spec:
  replicas: 1

  selector:
    matchLabels:
      app: bvrinfra-site

  template:
    metadata:
      labels:
        app: bvrinfra-site

    spec:

      imagePullSecrets:
        - name: ghcr-secret

      containers:
        - name: bvrinfra-site

          image: ghcr.io/bodapati88/bvrinfra-site:sha-c66ee51

          imagePullPolicy: Always

          ports:
            - containerPort: 80
